--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -447,9 +447,9 @@ main {
   flex: 1;
 
   &.error-404 {
-    height: 100%;
-    min-height: 400px;
-    padding: 0 40px;
+    // height: 100%;
+    // min-height: 400px;
+    padding: 75px 40px;
     border-top: 1px solid $colorFooterBG;
     background-color: #ffffff;
     .row {
