Vypis obci a okresov aj style

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -462,6 +462,99 @@ main {
     }
   }
 
+  &.all-cities {
+    border-top: 1px solid $colorFooterBG;
+    background-color: #ffffff;
+
+
+    .container {
+      padding: 50px 0 50px 0;
+      gap: 50px;
+
+      .row {
+        margin: 0 !important;
+        &.buttons {
+          padding: 0 0 50px 0;
+
+          ul {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: calc( var(--bs-gutter-x) * 0.5 );
+
+            @media screen and (max-width: 592px) {
+              grid-template-columns: repeat(2, 1fr);
+            }
+
+          }
+
+          li {
+            width: 13%;
+            max-width: 200px;
+            min-width: 150px;
+            text-align: center;
+            text-transform: uppercase;
+            font-size: 0.8rem;
+            font-weight: 500;
+            @media screen and (max-width: 576px) {
+              max-width: 50%;
+              min-width: 250px;
+            }
+            a {
+              display: block;
+              padding: 8px 10px 7px 10px;
+              border-radius: 4px;
+              color: #aeceff;
+              background-color: $colorPrimaryDark;
+              &:hover {
+                color: #ffffff;
+                background-color: $colorSecondaryDark;
+              }
+            }
+          }
+        }
+      }
+
+      .list {
+        ul {
+          display: flex;
+          flex-wrap: wrap;
+
+          li {
+            width: 20%;
+            padding: 5px;
+
+            a {
+              display: block;
+              color: #868686;
+              font-size: 0.9rem;
+              font-weight: 500;
+              border-radius: 4px;
+              padding: 8px 15px 7px 15px;
+              background-color: #efefef;
+              &:hover {
+                color: #ffffff;
+                background-color: $colorSecondaryDark;
+              }
+            }
+
+            @media screen and (max-width: 992px) {
+              min-width: 25%;
+            }
+            @media screen and (max-width: 768px) {
+              min-width: 33%;
+            }
+            @media screen and (max-width: 576px) {
+              min-width: 50%;
+            }
+          }
+        }
+      }
+
+    }
+
+  }
+
   &.all-locations {
     border-top: 1px solid $colorFooterBG;
     background-color: #ffffff;
