--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -446,6 +446,22 @@ header {
 main {
   flex: 1;
 
+  &.empty {
+    // height: 100%;
+    // min-height: 400px;
+    padding: 75px 40px;
+    border-top: 1px solid $colorFooterBG;
+    background-color: #ffffff;
+    .msg-amazing {
+      text-align: center;
+      color: #ffffff;
+      padding: 10px 50px;
+      font-weight: 500;
+      border-radius: 5px;
+      background-color: $colorSecondary;
+    }
+  }
+
   &.error-404 {
     // height: 100%;
     // min-height: 400px;
@@ -466,13 +482,14 @@ main {
     border-top: 1px solid $colorFooterBG;
     background-color: #ffffff;
 
-
     .container {
+      display: flex;
+      flex-direction: column;
       padding: 50px 0 50px 0;
-      gap: 50px;
 
       .row {
         margin: 0 !important;
+        
         &.buttons {
           padding: 0 0 50px 0;
 
@@ -513,42 +530,58 @@ main {
             }
           }
         }
-      }
 
-      .list {
-        ul {
-          display: flex;
-          flex-wrap: wrap;
-
-          li {
-            width: 20%;
-            padding: 5px;
-
-            a {
-              display: block;
-              color: #868686;
-              font-size: 0.9rem;
-              font-weight: 500;
-              border-radius: 4px;
-              padding: 8px 15px 7px 15px;
-              background-color: #efefef;
-              &:hover {
-                color: #ffffff;
-                background-color: $colorSecondaryDark;
+        &.list {
+  
+          ul {
+            display: flex;
+            flex-wrap: wrap;
+  
+            li {
+              width: 20%;
+              padding: 5px;
+  
+              a {
+                display: block;
+                color: #868686;
+                font-size: 0.9rem;
+                font-weight: 500;
+                border-radius: 4px;
+                padding: 8px 15px 7px 15px;
+                background-color: #efefef;
+                &:hover {
+                  color: #ffffff;
+                  background-color: $colorSecondaryDark;
+                }
+              }
+  
+              @media screen and (max-width: 992px) {
+                min-width: 25%;
+              }
+              @media screen and (max-width: 768px) {
+                min-width: 33%;
+              }
+              @media screen and (max-width: 576px) {
+                min-width: 50%;
               }
             }
+          }
+          .msg-empty {
+            display: flex;
+            align-items: center;
+            justify-content: center;
 
-            @media screen and (max-width: 992px) {
-              min-width: 25%;
-            }
-            @media screen and (max-width: 768px) {
-              min-width: 33%;
-            }
-            @media screen and (max-width: 576px) {
-              min-width: 50%;
+            p {
+              text-align: center;
+              color: #6e6e6e;
+              padding: 10px 50px;
+              font-weight: 500;
+              border-radius: 5px;
+              background-color: #e9e9e9;
             }
           }
         }
+  
       }
 
     }
